--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ body {
     .fs-xxl{font-size: 35px !important;}
     .fs-name{font-size: 35px !important;}
     .fs-body{font-size: 20px !important;}
+    .fs-data{font-size: 20px !important;}
     
  } 
 
@@ -146,6 +147,7 @@ body {
     .fs-xl{font-size: 36px !important; }
     .fs-name{font-size: 26px !important;}
     .fs-body{font-size: 20px !important;}
+    .fs-data{font-size: 20px !important;}
     
  } 
 
@@ -165,6 +167,7 @@ body {
     .fs-xxl{font-size: 35px !important;}
     .fs-name{font-size: 35px !important;}
     .fs-body{font-size: 20px !important;}
+    .fs-data{font-size: 20px !important;}
     .container{width: 95% !important;}
     .vh-center {position: absolute;top: 40%;left: 50%;transform: translate(-50%, -50%);}
     
@@ -185,6 +188,7 @@ body {
     .fs-xxl{font-size: 35px !important;}
     .fs-name{font-size: 30px !important;}
     .fs-body{font-size: 20px !important;}
+    .fs-data{font-size: 20px !important;}
     .datos{visibility: hidden;}
  } 
  
@@ -205,6 +209,7 @@ body {
     .fs-xxl{font-size: 48px !important;}
     .fs-name{font-size: 30px !important;}
     .fs-body{font-size: 22px !important;}
+    .fs-data{font-size: 20px !important;}
     .container{width: 90% !important;}
     .camp-wd{width: 600px !important;}
     .datos{visibility:hidden}
